parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> MODULE ID creaDirFunc PUNTCOM ajustes var_func tipo_main MAIN actualiza_id crea_func bloque_func
Rule 2     creaDirFunc -> <empty>
Rule 3     ajustes -> CANVAS BRAIZQ WIDTH CTE_I PUNTCOM HEIGHT CTE_I PUNTCOM BACKGROUND CTE_F COMA CTE_F COMA CTE_F PUNTCOM BRADER
Rule 4     ajustes -> IMPORT CTE_STR
Rule 5     var_func -> tipo ID actualiza_id var_o_func
Rule 6     var_func -> VOID tipo_void ID actualiza_id crea_func PARIZQ pars PARDER bloque_func funcs
Rule 7     var_func -> <empty>
Rule 8     actualiza_id -> <empty>
Rule 9     var_o_func -> PARIZQ crea_func pars PARDER bloque_func funcs
Rule 10    var_o_func -> crea_var lista vars_lista PUNTCOM var_func
Rule 11    crea_var -> <empty>
Rule 12    bloque_func -> BRAIZQ vars_estatutos returns BRADER
Rule 13    vars_estatutos -> vars estatutos
Rule 14    vars_estatutos -> estatutos
Rule 15    estatutos -> estatuto estatutos
Rule 16    estatutos -> <empty>
Rule 17    returns -> RETURN expresion PUNTCOM
Rule 18    returns -> <empty>
Rule 19    vars -> tipo ID actualiza_id crea_var lista vars_lista PUNTCOM mas_vars
Rule 20    vars_lista -> COMA ID actualiza_id crea_var lista vars_lista
Rule 21    vars_lista -> <empty>
Rule 22    mas_vars -> vars
Rule 23    mas_vars -> <empty>
Rule 24    funcs -> func funcs
Rule 25    funcs -> <empty>
Rule 26    func -> tipo ID actualiza_id crea_func PARIZQ pars PARDER bloque_func
Rule 27    func -> VOID tipo_void ID actualiza_id crea_func PARIZQ pars PARDER bloque_func
Rule 28    tipo_void -> <empty>
Rule 29    tipo_main -> <empty>
Rule 30    crea_func -> <empty>
Rule 31    expresion -> exp mas_exp
Rule 32    mas_exp -> MENOR exp
Rule 33    mas_exp -> MAYOR exp
Rule 34    mas_exp -> MENIGUAL exp
Rule 35    mas_exp -> MAYIGUAL exp
Rule 36    mas_exp -> IGUAL exp
Rule 37    mas_exp -> DIF exp
Rule 38    mas_exp -> AND exp
Rule 39    mas_exp -> OR exp
Rule 40    mas_exp -> <empty>
Rule 41    exp -> termino suma_resta
Rule 42    suma_resta -> SUMA termino
Rule 43    suma_resta -> RESTA termino
Rule 44    suma_resta -> <empty>
Rule 45    termino -> factor mult_div
Rule 46    mult_div -> MULT factor
Rule 47    mult_div -> DIV factor
Rule 48    mult_div -> <empty>
Rule 49    factor -> PARIZQ expresion PARDER
Rule 50    factor -> var_func_call
Rule 51    factor -> SUMA var_func_call
Rule 52    factor -> RESTA var_func_call
Rule 53    var_func_call -> var
Rule 54    var_func_call -> func_call
Rule 55    estatuto -> asignacion
Rule 56    estatuto -> condicion
Rule 57    estatuto -> escritura
Rule 58    estatuto -> ciclo
Rule 59    estatuto -> instruccion
Rule 60    estatuto -> func_call PUNTCOM
Rule 61    asignacion -> ID lista ASIG exp_input PUNTCOM
Rule 62    exp_input -> expresion
Rule 63    exp_input -> INPUT PARIZQ PARDER
Rule 64    condicion -> IF PARIZQ expresion PARDER bloque else_bloque
Rule 65    else_bloque -> ELSE bloque
Rule 66    else_bloque -> <empty>
Rule 67    escritura -> PRINT PARIZQ arg_escritura PARDER PUNTCOM
Rule 68    arg_escritura -> expresion args_escritura
Rule 69    arg_escritura -> CTE_STR args_escritura
Rule 70    args_escritura -> COMA arg_escritura
Rule 71    args_escritura -> <empty>
Rule 72    ciclo -> REPEAT PARIZQ expresion PARDER bloque
Rule 73    tipo -> INT actualiza_tipo
Rule 74    tipo -> FLOAT actualiza_tipo
Rule 75    actualiza_tipo -> <empty>
Rule 76    lista -> CORIZQ expresion CORDER matriz
Rule 77    lista -> <empty>
Rule 78    matriz -> CORIZQ expresion CORDER
Rule 79    matriz -> <empty>
Rule 80    var -> ID lista
Rule 81    var -> CTE_I
Rule 82    var -> CTE_F
Rule 83    func_call -> ID PARIZQ args PARDER
Rule 84    args -> expresion arg
Rule 85    args -> <empty>
Rule 86    arg -> COMA expresion arg
Rule 87    arg -> <empty>
Rule 88    bloque -> BRAIZQ estatutos BRADER
Rule 89    pars -> tipo ID par
Rule 90    pars -> <empty>
Rule 91    par -> COMA tipo ID par
Rule 92    par -> <empty>
Rule 93    instruccion -> FORWARD PARIZQ expresion PARDER PUNTCOM
Rule 94    instruccion -> BACKWARD PARIZQ expresion PARDER PUNTCOM
Rule 95    instruccion -> LEFT PARIZQ expresion PARDER PUNTCOM
Rule 96    instruccion -> RIGHT PARIZQ expresion PARDER PUNTCOM
Rule 97    instruccion -> TURN PARIZQ expresion PARDER PUNTCOM
Rule 98    instruccion -> SIZE PARIZQ expresion PARDER PUNTCOM
Rule 99    instruccion -> CIRCLE PARIZQ expresion PARDER transform PUNTCOM
Rule 100   instruccion -> TRIANGLE PARIZQ expresion PARDER transform PUNTCOM
Rule 101   instruccion -> SQUARE PARIZQ expresion PARDER transform PUNTCOM
Rule 102   instruccion -> NGON PARIZQ expresion COMA expresion PARDER transform PUNTCOM
Rule 103   instruccion -> ARC PARIZQ expresion COMA expresion PARDER transform PUNTCOM
Rule 104   instruccion -> UP PARIZQ PARDER PUNTCOM
Rule 105   instruccion -> DOWN PARIZQ PARDER PUNTCOM
Rule 106   instruccion -> COLOR PARIZQ expresion COMA expresion COMA expresion PARDER PUNTCOM
Rule 107   transform -> PUNTO altera transform
Rule 108   transform -> <empty>
Rule 109   altera -> ROTATE PARIZQ expresion PARDER
Rule 110   altera -> STRETCH PARIZQ expresion PARDER
Rule 111   altera -> FILL PARIZQ PARDER

Terminals, with rules where they appear

AND                  : 38
ARC                  : 103
ASIG                 : 61
BACKGROUND           : 3
BACKWARD             : 94
BRADER               : 3 12 88
BRAIZQ               : 3 12 88
CANVAS               : 3
CIRCLE               : 99
COLOR                : 106
COMA                 : 3 3 20 70 86 91 102 103 106 106
CORDER               : 76 78
CORIZQ               : 76 78
CTE_F                : 3 3 3 82
CTE_I                : 3 3 81
CTE_STR              : 4 69
DIF                  : 37
DIV                  : 47
DOWN                 : 105
ELSE                 : 65
FILL                 : 111
FLOAT                : 74
FORWARD              : 93
HEIGHT               : 3
ID                   : 1 5 6 19 20 26 27 61 80 83 89 91
IF                   : 64
IGUAL                : 36
IMPORT               : 4
INPUT                : 63
INT                  : 73
LEFT                 : 95
MAIN                 : 1
MAYIGUAL             : 35
MAYOR                : 33
MENIGUAL             : 34
MENOR                : 32
MODULE               : 1
MULT                 : 46
NGON                 : 102
OR                   : 39
PARDER               : 6 9 26 27 49 63 64 67 72 83 93 94 95 96 97 98 99 100 101 102 103 104 105 106 109 110 111
PARIZQ               : 6 9 26 27 49 63 64 67 72 83 93 94 95 96 97 98 99 100 101 102 103 104 105 106 109 110 111
PRINT                : 67
PUNTCOM              : 1 3 3 3 10 17 19 60 61 67 93 94 95 96 97 98 99 100 101 102 103 104 105 106
PUNTO                : 107
REPEAT               : 72
RESTA                : 43 52
RETURN               : 17
RIGHT                : 96
ROTATE               : 109
SIZE                 : 98
SQUARE               : 101
STRETCH              : 110
SUMA                 : 42 51
TRIANGLE             : 100
TURN                 : 97
UP                   : 104
VOID                 : 6 27
WIDTH                : 3
error                : 

Nonterminals, with rules where they appear

actualiza_id         : 1 5 6 19 20 26 27
actualiza_tipo       : 73 74
ajustes              : 1
altera               : 107
arg                  : 84 86
arg_escritura        : 67 70
args                 : 83
args_escritura       : 68 69
asignacion           : 55
bloque               : 64 65 72
bloque_func          : 1 6 9 26 27
ciclo                : 58
condicion            : 56
creaDirFunc          : 1
crea_func            : 1 6 9 26 27
crea_var             : 10 19 20
else_bloque          : 64
escritura            : 57
estatuto             : 15
estatutos            : 13 14 15 88
exp                  : 31 32 33 34 35 36 37 38 39
exp_input            : 61
expresion            : 17 49 62 64 68 72 76 78 84 86 93 94 95 96 97 98 99 100 101 102 102 103 103 106 106 106 109 110
factor               : 45 46 47
func                 : 24
func_call            : 54 60
funcs                : 6 9 24
instruccion          : 59
lista                : 10 19 20 61 80
mas_exp              : 31
mas_vars             : 19
matriz               : 76
mult_div             : 45
par                  : 89 91
pars                 : 6 9 26 27
programa             : 0
returns              : 12
suma_resta           : 41
termino              : 41 42 43
tipo                 : 5 19 26 89 91
tipo_main            : 1
tipo_void            : 6 27
transform            : 99 100 101 102 103 107
var                  : 53
var_func             : 1 10
var_func_call        : 50 51 52
var_o_func           : 5
vars                 : 13 22
vars_estatutos       : 12
vars_lista           : 10 19 20

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . MODULE ID creaDirFunc PUNTCOM ajustes var_func tipo_main MAIN actualiza_id crea_func bloque_func

    MODULE          shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> MODULE . ID creaDirFunc PUNTCOM ajustes var_func tipo_main MAIN actualiza_id crea_func bloque_func

    ID              shift and go to state 3


state 3

    (1) programa -> MODULE ID . creaDirFunc PUNTCOM ajustes var_func tipo_main MAIN actualiza_id crea_func bloque_func
    (2) creaDirFunc -> .

    PUNTCOM         reduce using rule 2 (creaDirFunc -> .)

    creaDirFunc                    shift and go to state 4

state 4

    (1) programa -> MODULE ID creaDirFunc . PUNTCOM ajustes var_func tipo_main MAIN actualiza_id crea_func bloque_func

    PUNTCOM         shift and go to state 5


state 5

    (1) programa -> MODULE ID creaDirFunc PUNTCOM . ajustes var_func tipo_main MAIN actualiza_id crea_func bloque_func
    (3) ajustes -> . CANVAS BRAIZQ WIDTH CTE_I PUNTCOM HEIGHT CTE_I PUNTCOM BACKGROUND CTE_F COMA CTE_F COMA CTE_F PUNTCOM BRADER
    (4) ajustes -> . IMPORT CTE_STR

    CANVAS          shift and go to state 7
    IMPORT          shift and go to state 8

    ajustes                        shift and go to state 6

state 6

    (1) programa -> MODULE ID creaDirFunc PUNTCOM ajustes . var_func tipo_main MAIN actualiza_id crea_func bloque_func
    (5) var_func -> . tipo ID actualiza_id var_o_func
    (6) var_func -> . VOID tipo_void ID actualiza_id crea_func PARIZQ pars PARDER bloque_func funcs
    (7) var_func -> .
    (73) tipo -> . INT actualiza_tipo
    (74) tipo -> . FLOAT actualiza_tipo

    VOID            shift and go to state 11
    MAIN            reduce using rule 7 (var_func -> .)
    INT             shift and go to state 12
    FLOAT           shift and go to state 13

    var_func                       shift and go to state 9
    tipo                           shift and go to state 10

state 7

    (3) ajustes -> CANVAS . BRAIZQ WIDTH CTE_I PUNTCOM HEIGHT CTE_I PUNTCOM BACKGROUND CTE_F COMA CTE_F COMA CTE_F PUNTCOM BRADER

    BRAIZQ          shift and go to state 14


state 8

    (4) ajustes -> IMPORT . CTE_STR

    CTE_STR         shift and go to state 15


state 9

    (1) programa -> MODULE ID creaDirFunc PUNTCOM ajustes var_func . tipo_main MAIN actualiza_id crea_func bloque_func
    (29) tipo_main -> .

    MAIN            reduce using rule 29 (tipo_main -> .)

    tipo_main                      shift and go to state 16

state 10

    (5) var_func -> tipo . ID actualiza_id var_o_func

    ID              shift and go to state 17


state 11

    (6) var_func -> VOID . tipo_void ID actualiza_id crea_func PARIZQ pars PARDER bloque_func funcs
    (28) tipo_void -> .

    ID              reduce using rule 28 (tipo_void -> .)

    tipo_void                      shift and go to state 18

state 12

    (73) tipo -> INT . actualiza_tipo
    (75) actualiza_tipo -> .

    ID              reduce using rule 75 (actualiza_tipo -> .)

    actualiza_tipo                 shift and go to state 19

state 13

    (74) tipo -> FLOAT . actualiza_tipo
    (75) actualiza_tipo -> .

    ID              reduce using rule 75 (actualiza_tipo -> .)

    actualiza_tipo                 shift and go to state 20

state 14

    (3) ajustes -> CANVAS BRAIZQ . WIDTH CTE_I PUNTCOM HEIGHT CTE_I PUNTCOM BACKGROUND CTE_F COMA CTE_F COMA CTE_F PUNTCOM BRADER

    WIDTH           shift and go to state 21


state 15

    (4) ajustes -> IMPORT CTE_STR .

    VOID            reduce using rule 4 (ajustes -> IMPORT CTE_STR .)
    INT             reduce using rule 4 (ajustes -> IMPORT CTE_STR .)
    FLOAT           reduce using rule 4 (ajustes -> IMPORT CTE_STR .)
    MAIN            reduce using rule 4 (ajustes -> IMPORT CTE_STR .)


state 16

    (1) programa -> MODULE ID creaDirFunc PUNTCOM ajustes var_func tipo_main . MAIN actualiza_id crea_func bloque_func

    MAIN            shift and go to state 22


state 17

    (5) var_func -> tipo ID . actualiza_id var_o_func
    (8) actualiza_id -> .

    PARIZQ          reduce using rule 8 (actualiza_id -> .)
    CORIZQ          reduce using rule 8 (actualiza_id -> .)
    COMA            reduce using rule 8 (actualiza_id -> .)
    PUNTCOM         reduce using rule 8 (actualiza_id -> .)

    actualiza_id                   shift and go to state 23

state 18

    (6) var_func -> VOID tipo_void . ID actualiza_id crea_func PARIZQ pars PARDER bloque_func funcs

    ID              shift and go to state 24


state 19

    (73) tipo -> INT actualiza_tipo .

    ID              reduce using rule 73 (tipo -> INT actualiza_tipo .)


state 20

    (74) tipo -> FLOAT actualiza_tipo .

    ID              reduce using rule 74 (tipo -> FLOAT actualiza_tipo .)


state 21

    (3) ajustes -> CANVAS BRAIZQ WIDTH . CTE_I PUNTCOM HEIGHT CTE_I PUNTCOM BACKGROUND CTE_F COMA CTE_F COMA CTE_F PUNTCOM BRADER

    CTE_I           shift and go to state 25


state 22

    (1) programa -> MODULE ID creaDirFunc PUNTCOM ajustes var_func tipo_main MAIN . actualiza_id crea_func bloque_func
    (8) actualiza_id -> .

    BRAIZQ          reduce using rule 8 (actualiza_id -> .)

    actualiza_id                   shift and go to state 26

state 23

    (5) var_func -> tipo ID actualiza_id . var_o_func
    (9) var_o_func -> . PARIZQ crea_func pars PARDER bloque_func funcs
    (10) var_o_func -> . crea_var lista vars_lista PUNTCOM var_func
    (11) crea_var -> .

    PARIZQ          shift and go to state 28
    CORIZQ          reduce using rule 11 (crea_var -> .)
    COMA            reduce using rule 11 (crea_var -> .)
    PUNTCOM         reduce using rule 11 (crea_var -> .)

    var_o_func                     shift and go to state 27
    crea_var                       shift and go to state 29

state 24

    (6) var_func -> VOID tipo_void ID . actualiza_id crea_func PARIZQ pars PARDER bloque_func funcs
    (8) actualiza_id -> .

    PARIZQ          reduce using rule 8 (actualiza_id -> .)

    actualiza_id                   shift and go to state 30

state 25

    (3) ajustes -> CANVAS BRAIZQ WIDTH CTE_I . PUNTCOM HEIGHT CTE_I PUNTCOM BACKGROUND CTE_F COMA CTE_F COMA CTE_F PUNTCOM BRADER

    PUNTCOM         shift and go to state 31


state 26

    (1) programa -> MODULE ID creaDirFunc PUNTCOM ajustes var_func tipo_main MAIN actualiza_id . crea_func bloque_func
    (30) crea_func -> .

    BRAIZQ          reduce using rule 30 (crea_func -> .)

    crea_func                      shift and go to state 32

state 27

    (5) var_func -> tipo ID actualiza_id var_o_func .

    MAIN            reduce using rule 5 (var_func -> tipo ID actualiza_id var_o_func .)


state 28

    (9) var_o_func -> PARIZQ . crea_func pars PARDER bloque_func funcs
    (30) crea_func -> .

    INT             reduce using rule 30 (crea_func -> .)
    FLOAT           reduce using rule 30 (crea_func -> .)
    PARDER          reduce using rule 30 (crea_func -> .)

    crea_func                      shift and go to state 33

state 29

    (10) var_o_func -> crea_var . lista vars_lista PUNTCOM var_func
    (76) lista -> . CORIZQ expresion CORDER matriz
    (77) lista -> .

    CORIZQ          shift and go to state 35
    COMA            reduce using rule 77 (lista -> .)
    PUNTCOM         reduce using rule 77 (lista -> .)

    lista                          shift and go to state 34

state 30

    (6) var_func -> VOID tipo_void ID actualiza_id . crea_func PARIZQ pars PARDER bloque_func funcs
    (30) crea_func -> .

    PARIZQ          reduce using rule 30 (crea_func -> .)

    crea_func                      shift and go to state 36

state 31

    (3) ajustes -> CANVAS BRAIZQ WIDTH CTE_I PUNTCOM . HEIGHT CTE_I PUNTCOM BACKGROUND CTE_F COMA CTE_F COMA CTE_F PUNTCOM BRADER

    HEIGHT          shift and go to state 37


state 32

    (1) programa -> MODULE ID creaDirFunc PUNTCOM ajustes var_func tipo_main MAIN actualiza_id crea_func . bloque_func
    (12) bloque_func -> . BRAIZQ vars_estatutos returns BRADER

    BRAIZQ          shift and go to state 39

    bloque_func                    shift and go to state 38

state 33

    (9) var_o_func -> PARIZQ crea_func . pars PARDER bloque_func funcs
    (89) pars -> . tipo ID par
    (90) pars -> .
    (73) tipo -> . INT actualiza_tipo
    (74) tipo -> . FLOAT actualiza_tipo

    PARDER          reduce using rule 90 (pars -> .)
    INT             shift and go to state 12
    FLOAT           shift and go to state 13

    pars                           shift and go to state 40
    tipo                           shift and go to state 41

state 34

    (10) var_o_func -> crea_var lista . vars_lista PUNTCOM var_func
    (20) vars_lista -> . COMA ID actualiza_id crea_var lista vars_lista
    (21) vars_lista -> .

    COMA            shift and go to state 43
    PUNTCOM         reduce using rule 21 (vars_lista -> .)

    vars_lista                     shift and go to state 42

state 35

    (76) lista -> CORIZQ . expresion CORDER matriz
    (31) expresion -> . exp mas_exp
    (41) exp -> . termino suma_resta
    (45) termino -> . factor mult_div
    (49) factor -> . PARIZQ expresion PARDER
    (50) factor -> . var_func_call
    (51) factor -> . SUMA var_func_call
    (52) factor -> . RESTA var_func_call
    (53) var_func_call -> . var
    (54) var_func_call -> . func_call
    (80) var -> . ID lista
    (81) var -> . CTE_I
    (82) var -> . CTE_F
    (83) func_call -> . ID PARIZQ args PARDER

    PARIZQ          shift and go to state 48
    SUMA            shift and go to state 50
    RESTA           shift and go to state 51
    ID              shift and go to state 54
    CTE_I           shift and go to state 55
    CTE_F           shift and go to state 56

    expresion                      shift and go to state 44
    exp                            shift and go to state 45
    termino                        shift and go to state 46
    factor                         shift and go to state 47
    var_func_call                  shift and go to state 49
    var                            shift and go to state 52
    func_call                      shift and go to state 53

state 36

    (6) var_func -> VOID tipo_void ID actualiza_id crea_func . PARIZQ pars PARDER bloque_func funcs

    PARIZQ          shift and go to state 57


state 37

    (3) ajustes -> CANVAS BRAIZQ WIDTH CTE_I PUNTCOM HEIGHT . CTE_I PUNTCOM BACKGROUND CTE_F COMA CTE_F COMA CTE_F PUNTCOM BRADER

    CTE_I           shift and go to state 58


state 38

    (1) programa -> MODULE ID creaDirFunc PUNTCOM ajustes var_func tipo_main MAIN actualiza_id crea_func bloque_func .

    $end            reduce using rule 1 (programa -> MODULE ID creaDirFunc PUNTCOM ajustes var_func tipo_main MAIN actualiza_id crea_func bloque_func .)


state 39

    (12) bloque_func -> BRAIZQ . vars_estatutos returns BRADER
    (13) vars_estatutos -> . vars estatutos
    (14) vars_estatutos -> . estatutos
    (19) vars -> . tipo ID actualiza_id crea_var lista vars_lista PUNTCOM mas_vars
    (15) estatutos -> . estatuto estatutos
    (16) estatutos -> .
    (73) tipo -> . INT actualiza_tipo
    (74) tipo -> . FLOAT actualiza_tipo
    (55) estatuto -> . asignacion
    (56) estatuto -> . condicion
    (57) estatuto -> . escritura
    (58) estatuto -> . ciclo
    (59) estatuto -> . instruccion
    (60) estatuto -> . func_call PUNTCOM
    (61) asignacion -> . ID lista ASIG exp_input PUNTCOM
    (64) condicion -> . IF PARIZQ expresion PARDER bloque else_bloque
    (67) escritura -> . PRINT PARIZQ arg_escritura PARDER PUNTCOM
    (72) ciclo -> . REPEAT PARIZQ expresion PARDER bloque
    (93) instruccion -> . FORWARD PARIZQ expresion PARDER PUNTCOM
    (94) instruccion -> . BACKWARD PARIZQ expresion PARDER PUNTCOM
    (95) instruccion -> . LEFT PARIZQ expresion PARDER PUNTCOM
    (96) instruccion -> . RIGHT PARIZQ expresion PARDER PUNTCOM
    (97) instruccion -> . TURN PARIZQ expresion PARDER PUNTCOM
    (98) instruccion -> . SIZE PARIZQ expresion PARDER PUNTCOM
    (99) instruccion -> . CIRCLE PARIZQ expresion PARDER transform PUNTCOM
    (100) instruccion -> . TRIANGLE PARIZQ expresion PARDER transform PUNTCOM
    (101) instruccion -> . SQUARE PARIZQ expresion PARDER transform PUNTCOM
    (102) instruccion -> . NGON PARIZQ expresion COMA expresion PARDER transform PUNTCOM
    (103) instruccion -> . ARC PARIZQ expresion COMA expresion PARDER transform PUNTCOM
    (104) instruccion -> . UP PARIZQ PARDER PUNTCOM
    (105) instruccion -> . DOWN PARIZQ PARDER PUNTCOM
    (106) instruccion -> . COLOR PARIZQ expresion COMA expresion COMA expresion PARDER PUNTCOM
    (83) func_call -> . ID PARIZQ args PARDER
